--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,12 @@ APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
+# DatoCMS Configuration
+DATOCMS_API_TOKEN=
+DATOCMS_ENVIRONMENT=
+DATOCMS_PREVIEW=false
+DATOCMS_CACHE_DURATION=3600
+
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
 
